쪽지 안읽었을 때 td색상변경 추가, 테이블css추가

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -210,6 +210,7 @@ div.tab {
     overflow: hidden;
     border: 1px solid #ccc;
     background-color: #f1f1f1;
+    width : 197.3px;
 }
 
 .tab-pane.active{
@@ -266,7 +267,6 @@ table.type08 thead td {
 }
 
 table.type08 tbody td {
-  /*width: 150px;*/
   font-weight: bold;
   vertical-align: top;
   border-bottom: 1px solid #ccc;
@@ -315,4 +315,21 @@ tr:nth-child(even){background-color: #CBCBCB;}
 
 .divider{
   background: #f1f1f1;
+}
+.normal_td{
+  /*width: 150px;*/
+  font-weight: bold;
+  vertical-align: top;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  padding: 7px;
+}
+
+.note_read_notyet{
+  font-weight: bold;
+  vertical-align: top;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  padding: 7px;
+  background-color: red;
 }
