--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -52,7 +52,7 @@
     </div>
     <div id="search_area">
       <form id="form" action="/first_test/search/1" method="get">
-          <input type="text" name="searchText">
+          <input type="text" name="searchText" class="searchText"placeholder="검색">
           <input type="submit" class="btn" value='검색'>
       </form>
     </div>
@@ -217,16 +217,16 @@
                 <div class = "modal-body">
                 <form>
                   <div class = "form-group">
-                <input type="radio" name="choice" value="버림" >버림
+                <input type="radio" name="choice" value="버림">버림
                 <input type="radio" name="choice" value="구함">구함
               </div>
               <div class = "form-group">
-                 <label for="title" class="control-label"> 글제목 : </label>
+                 <label for="title" class="control-label"> 글제목: </label>
                 <input type='text' class = "form-control" id='title'>
               </div>
               <div class ="form-group">
-                 <label for="content" class="control-label"> 내용 : </label>
-                <textarea rows='5' cols='20' name='comments' class = "form-control" id='content'></textarea>
+                 <label for="content" class="control-label"> 내용:  &nbsp;&nbsp;</label>
+                  <textarea rows='5' cols='20' name='comments' class = "form-control" id='content'></textarea>
               </div>
               </form>
               <div class = "modal-footer">
@@ -369,23 +369,23 @@
                           <input type = "text" class = "form-control" id = "class_name">
                         </div>
                         <div class = "form-group">
-                          <label for="prof-name" class="control-label"> 교수 : </label>
+                          <label for="prof-name" class="control-label"> 교수 : &emsp;&emsp;&nbsp;&nbsp;</label>
                           <input type = "text" class = "form-control" id = "prof_name">
                         </div>
                         <div class = "form-group">
-                          <label for="time" class="control-label"> 시간 : </label>
+                          <label for="time" class="control-label"> 시간 : &emsp;&emsp;&nbsp;&nbsp;</label>
                           <input type = "text" class = "form-control" id = "time">
                         </div>
                         <div class = "form-group">
-                          <label for="change-class-name" class="control-label"> 바꿀 과목 : </label>
+                          <label for="change-class-name" class="control-label"> 바꿀 과목 : &nbsp;</label>
                           <input type = "text" class = "form-control" id = "change_class_name">
                         </div>
                         <div class = "form-group">
-                          <label for="change-prof-name" class="control-label"> 교수 : </label>
+                          <label for="change-prof-name" class="control-label"> 교수 : &emsp;&emsp;&nbsp;&nbsp;</label>
                           <input type = "text" class = "form-control" id = "change_prof_name">
                         </div>
                         <div class = "form-group">
-                          <label for="change-time" class="control-label"> 시간 : </label>
+                          <label for="change-time" class="control-label"> 시간 : &emsp;&emsp;&nbsp;&nbsp;</label>
                           <input type = "text" class = "form-control" id = "change_time">
                         </div>
                       </form>
