--- a/views/ft_join2.ejs
+++ b/views/ft_join2.ejs
@@ -13,7 +13,7 @@
     <div id="wrapper">
          <div id="d1"><p class="p_style2">이메일</p>
          </div>
-         <div id="d2"><p class="p_style2">닉네임</p>
+         <div id="d2"><p class="p_style2">이름</p>
          </div>
          <div id="d7"><input type="text" class="a1" id="join_nickname">
          </div>
@@ -53,7 +53,7 @@
              <% } else  {%>
              <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>  <button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button>
              <% } %>
-             
+
                      <div class = "modal" id= "MailBoxModal" style="display:none;" >
                      <div class = "modal-dialog">
                        <div class = "modal-content">
