닉네임 -> 이름

--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -44,7 +44,7 @@
                       <p id="e_mail">이메일 :
                          <%     var oneItem = rows[0];  %>
                               <%=oneItem.email%></p>
-                      <p id="nickname">닉네임 :
+                      <p id="nickname">이름 :
                         <%    var oneItem = rows[0];
                           %>
                             <%=oneItem.name%></p>
