--- a/views/ft_updateinfo.ejs
+++ b/views/ft_updateinfo.ejs
@@ -15,14 +15,14 @@
              </div>
              <div id="z">
              </div>
-            
+
            </div>
            <div id="line_1">
            </div>
            <div id="wrap">
       <div id="d1"><p class="p_style2">이메일</p>
     </div>
-    <div id="d2"><p class="p_style2">닉네임</p>
+    <div id="d2"><p class="p_style2">이름</p>
     </div>
     <div id="d7">
 
