table css, mypage modal css변경

--- a/views/ft_mailbox.ejs
+++ b/views/ft_mailbox.ejs
@@ -11,7 +11,7 @@
 </div>
   <div class= "modal-body">
   <div id="recv_mail" class="tabcontent">
-    <table id = "RecvMailBoxTable" class="type08">
+    <table id = "RecvMailBoxTable" class="mailtable">
       <thead>
       <tr>
         <td> 발신자 </td>
@@ -88,7 +88,7 @@
     %>
   </div>
   <div id="send_mail" class="tabcontent">
-    <table id = "SendMailBoxTable" class="type08">
+    <table id = "SendMailBoxTable" class="mailtable">
       <thead>
       <tr>
         <td> 수신자 </td>
