--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -75,7 +75,7 @@
 
                       <div id="post_i_wrote" class="tabcontent">
                         <h2>내가 쓴 게시물</h2>
-                        <table border="1px solid black;">
+                        <table class="type08">
                             <thead>
                               <tr>
                                 <td>버림/구함</td>
@@ -118,7 +118,7 @@
 
                       <div id="exchange_i_wrote" class="tabcontent">
                         <h2>교환 신청 작성 목록</h2>
-                        <table border="1px solid black;">
+                        <table class="type08">
                             <thead>
                               <tr>
                                 <td>구하는 과목</td>
@@ -209,7 +209,7 @@
                       <div id="request_list" class="tabcontent">
                               <h2>내가 신청한 목록</h2>
 
-                                <table border="1px solid black;">
+                                <table class="type08">
                                     <thead>
                                       <tr>
                                         <td>신청일자</td>
