--- a/views/ft_showapp_test1111.ejs
+++ b/views/ft_showapp_test1111.ejs
@@ -4,7 +4,7 @@
   </button>
   </div> <!-- modal-header -->
   <div class= "modal-body">
-      <table border="1px solid black;">
+      <table class="type08">
           <thead>
             <tr>
               <td>이름</td>
