--- a/views/ft_showpost.ejs
+++ b/views/ft_showpost.ejs
@@ -5,7 +5,7 @@
 
 </div>
   <div class= "modal-body">
-    <table class ="buttons width-25" border="1px solid black;">
+    <table class ="type08">
       <thead>
         <tr>
           <td>작성자</td>
