--- a/public/stylesheets/new_mypage.css
+++ b/public/stylesheets/new_mypage.css
@@ -293,8 +293,8 @@ z-index: 30;
 
 .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 9999; /* Sit on top */
+    position: absolute; /* Stay in place */
+    z-index: 100; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
@@ -368,23 +368,23 @@ border-top: none;
 
 
 
-table {
+table.type08{
     border-collapse: collapse;
     text-align: left;
     line-height: 1.5;
     /*width: 100%;*/
     width : 100%;
 }
-table thead td {
+table.type08 thead td {
     font-weight: bold;
     vertical-align: top;
-    color: #369;
-    background-color: #BEEFFF;
-    border-bottom: 3px solid #036;
+    color: white;
+    background-color: #153238;
+    border-right: 1px solid white;
     text-align: center;
     padding: 7px;
 }
-table tbody td{
+table.type08 tbody td{
   /*width: 150px;*/
   font-weight: bold;
   vertical-align: top;
@@ -415,6 +415,29 @@ td {
 }
 */
 tr:hover,tr:hover td {
-   background: #FDF5E6!important;
+   background: white!important;
 }
-tr:nth-child(even){background-color: #CBCBCB;}
+
+table.mailtable {
+    border-collapse: collapse;
+    text-align: left;
+    line-height: 1.5;
+    width: 100%;
+}
+table.mailtable thead td {
+    font-weight: bold;
+    vertical-align: top;
+    color: white;
+    background-color: #153238;
+    border-bottom: 3px solid #036;
+    text-align: center;
+    padding: 7px;
+}
+
+table.mailtable tbody td {
+  font-weight: bold;
+  vertical-align: top;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  padding: 7px;
+}
