--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -80,40 +80,60 @@
 
     </div>
     <div id="main_area">
-                <div class = "dropdown">
+                <div class = "combobox">
+
                   <button class="dropdown-toggle" type ="button" data-toggle="dropdown" onclick="clickfunction()">
                     버림/구함
                   </button>
-                  <div id="dropdown_content" class = "dropdown-content">
+
+                <!--
+                <select id = "selectBox" onchange= "getSelectValue(this);">
+                  <option value = "guham">구하는 과목</option>
+                  <option value = "beorim">버리는 과목</option>
+                </select>
+              -->
+                <!--
+                <div id="combobox_content" class ="combobox-content">
+                  <a href = "/first_test/main/1/guham">구함</a>
+                  <a href = "/first_test/main/1/beorim">버림</a>
+                </div>
+              -->
+                  <div id="combobox_content" class = "combobox-content">
                     <a href = "/first_test/main/1/guham">구함</a>
                     <a href = "/first_test/main/1/beorim">버림</a>
-
                   </div>
+
                 </div>
 
                 <script>
                 function clickfunction() {
-                    var dropdown_content = document.getElementById("dropdown_content");
-                    if (dropdown_content.className.indexOf("show") == -1) {
-                        dropdown_content.className += " show";
+                    var combobox_content = document.getElementById("combobox_content");
+                    if (combobox_content.className.indexOf("show") == -1) {
+                        combobox_content.className += " show";
                     } else {
-                        dropdown_content.className = dropdown_content.className.replace(" show", "");
+                        combobox_content.className = combobox_content.className.replace(" show", "");
                     }
                 }
+                /*
+                function getSelectValue(frm){
+                  var combovalue = document.getElementById("selectbox");
+                }
+                */
+
                 </script>
 
     <div id="main_area_second">
     <div class = "tab-content">
         <div id="board" class="tab-pane">
 
-          <table class="type08">
+          <table class="type07">
               <thead>
                 <tr>
                   <td>게시글번호</td>
+                  <td>작성자</td>
                   <td>버림/구함</td>
                   <td>글제목</td>
                   <td>작성일자</td>
-                  <td>작성자</td>
                </tr>
               </thead>
                 <tbody>
@@ -128,6 +148,9 @@
                        <tr>
                          <td>
                            <%= i+1 %>
+                         </td>
+                         <td>
+                           <%=item.writer_name%>
                          </td>
                           <td>
                             <%=item.choice%>
@@ -145,9 +168,7 @@
                           <td>
                             <%=item.date%>
                           </td>
-                          <td>
-                            <%=item.writer_name%>
-                          </td>
+
                         </tr>
                         <script>
                         $('#board_content_view_title<%=item.id%>').click('show.bs.modal',function(event){
@@ -283,17 +304,15 @@
           <table class="type08">
             <thead>
               <tr>
-                <td>번호</td>
-                <td>작성자</td>
-                <td width="1%" bgcolor = "white"></td>
-                <td>구하는 과목명</td>
-                <td>교수</td>
-                <td>시간</td>
-                <td width="1%" bgcolor = "white"></td>
-                <td>버리는 과목명</td>
-                <td>교수</td>
-                <td>시간</td>
-                <td>교환신청</td>
+                <td class="ex_num">번호</td>
+                <td class="ex_writer">작성자</td>
+                <td class= "ex_subject">구하는 과목명</td>
+                <td class= "ex_professor">교수</td>
+                <td class = "ex_time">시간</td>
+                <td class = "ex_subject">버리는 과목명</td>
+                <td class = "ex_proffessor">교수</td>
+                <td class = "ex_time">시간</td>
+                <td id = "exchange_req_td">교환신청</td>
               </tr>
             </thead>
             <tbody>
@@ -309,11 +328,9 @@
                 <tr>
                   <td><%= i+1 %></td>
                   <td><%= oneItem.writer %></td>
-                  <td width="1%" bgcolor = "white"></td>
                   <td><%= oneItem.class_name%></td>
                   <td><%= oneItem.prof_name%></td>
-                  <td><%= oneItem.time%></td>
-                  <td width="1%" bgcolor = "white"></td>
+                  <td id = "divider"><%= oneItem.time%></td>
                   <td><%= oneItem.change_class_name%></td>
                   <td><%= oneItem.change_prof_name%></td>
                   <td><%= oneItem.change_time%></td>
