--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -19,24 +19,25 @@
         </div>
         <div id="div_login">
           <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>
-        <%
+          <%
           if(mailflag.length == 0){
             %>
             <img id="MailBoxbtn" src="/images/자산 3.png"></img>
-<%
+            <%
           }else{
             for( var i = 0 ; i < mailflag.length; i ++){
             var Item = mailflag[i];
-            if(Item.recv_read == 'N'){
+            if(Item.recv_read == 'Y'){
+              if(i == mailflag.length -1){
+                %>
+                <img id="MailBoxbtn" src="/images/자산 3.png"></img>
+                <%
+              }
+              continue;
+            }
+            else if(Item.recv_read == 'N'){
               %>
               <img id="MailBoxbtn" src="/images/자산 4.png"></img>
-
-              <%
-              break;
-            }else if (Item.recv_read == 'Y'){
-              %>
-              <img id="MailBoxbtn" src="/images/자산 3.png"></img>
-
               <%
               break;
             }
@@ -103,6 +104,7 @@
                                 <td>글제목</td>
                                 <td>작성일자</td>
                                 <td>작성자</td>
+                                <td>삭제</td>
 
                              </tr>
                             </thead>
