--- a/views/ft_mailbox.ejs
+++ b/views/ft_mailbox.ejs
@@ -59,9 +59,9 @@
             if( oneItem.recv_del == 'Y'){ continue;}
             else {
     %>
-    <div class = "modal" id= "contentViewModal<%=oneItem.id%>" aria-hidden="true" >
+    <div class = "modal-recv" id= "contentViewModal<%=oneItem.id%>" aria-hidden="true"  data-backdrop="">
     <div class = "modal-dialog">
-    <div class = "modal-content">
+    <div class = "modal-content" id= "modal-recv-content">
 
     </div>
     </div>
