--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -191,7 +191,7 @@ transition: width 1s;
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
+    z-index: 800; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
@@ -430,4 +430,115 @@ table.type08 td .ex_professor{
 }
 table.type08 td .ex_time{
   width : 97.6px;
+}
+
+
+
+/* 쪽지 창 css*/
+
+.modal-recv{
+
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 800; /* Sit on top */
+      padding-top: 100px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#modal-recv-content {
+  left : 50%;
+  top : 0px;
+  width:360px;
+  height:450px;
+  z-index:1000;
+  background-color: #fefefe;
+  margin: auto;
+  border: 1px solid #888;
+}
+
+#Replybtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 200px;
+  width: 70px;
+  height:29px;
+  z-index: 11;
+}
+
+#Okbtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 90px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+.recv_mail_textarea{
+  border-width: 1px;
+ border-color: rgb(190, 190, 190);
+ border-style: solid;
+ position: absolute;
+ margin-left: 15px;
+ width: 331px;
+ height: 258px;
+ z-index: 5;
+}
+
+#who_send{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 13px;
+  z-index: 3;
+}
+#send_time{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  position: absolute;
+  margin-top: 63px;
+  margin-left: 13px;
+  z-index: 3;
+}
+#who_number{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  position: absolute;
+  margin-top: 38px;
+  margin-left: 13px;
+  z-index: 3;
+}
+.modal-mail-header{
+  width :100%;
+  height : 110px;
+}
+.modal-mail-body{
+  width :100%;
+  height : 300px;
+}
+.modal-mail-footer{
+  width :100%;
+  height : 40px;
 }
