--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -270,7 +270,7 @@
                   <button type = "button" class = "close" data-dismiss="modal" aria-label = "Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
-                    <h4 class = "modal-title" id = "write_matching_title"> 버림/구함 글쓰기 </h4>
+                    <h2 class = "modal-title" id = "write_matching_title" style="font-family: NanumBarunGothic;"> 버림/구함 글쓰기 </h4>
                 </div>
                 <div class = "modal-body">
                 <form>
