--- a/views/ft_updateinfo.ejs
+++ b/views/ft_updateinfo.ejs
@@ -24,11 +24,12 @@
     </div>
     <div id="d2"><p class="p_style2">이름</p>
     </div>
-    <div id="d7">
-
+    <div id="d7" style="display : inline-block;">
+      <div id="d7_1" style="margin-left : 100px;">
         <%    var oneItem = rows[0];
           %>
             <%=oneItem.name%>
+        </div>
     </div>
     <div id="d3"><p class="p_style2">비밀번호</p>
     </div>
