--- a/views/ft_contentViewModal.ejs
+++ b/views/ft_contentViewModal.ejs
@@ -35,9 +35,9 @@
       </div>
 
 
-        <div class = "modal" id= "ReplyModal<%=rows[0].id%>" tabindex="-1" data-focus-on="input:first">
+        <div class = "reply_modal" id= "ReplyModal<%=rows[0].id%>" tabindex="-1" data-focus-on="input:first">
           <div class = "modal-dialog">
-            <div class = "modal-content">
+            <div class = "modal-content" id="modal-reply-content">
 
             </div>
           </div>
