--- a/views/ft_mailbox.ejs
+++ b/views/ft_mailbox.ejs
@@ -122,9 +122,9 @@
               if( oneItem.send_del == 'Y'){ continue;}
               else {
       %>
-              <div class = "modal" id= "SendcontentViewModal<%=oneItem.id%>" aria-hidden="true" style="display:none;"  data-backdrop="" >
+              <div class = "modal-send" id= "SendcontentViewModal<%=oneItem.id%>" aria-hidden="true" style="display:none;"  data-backdrop="" >
               <div class = "modal-dialog">
-              <div class = "modal-content">
+              <div class = "modal-content" id="modal-send-content">
                   <!-- remote ajax call이 되는영역 -->
               </div>
               </div>
