--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -110,22 +110,10 @@
     <div id="main_area">
                 <div class = "combobox">
 
-                  <button class="dropdown-toggle" type ="button" data-toggle="dropdown" onclick="clickfunction()">
+                  <button class="dropdown-toggle" type ="button" data-toggle="dropdown" onclick="clickfunction()" id="dropdown_btn">
                     버림/구함
                   </button>
 
-                <!--
-                <select id = "selectBox" onchange= "getSelectValue(this);">
-                  <option value = "guham">구하는 과목</option>
-                  <option value = "beorim">버리는 과목</option>
-                </select>
-              -->
-                <!--
-                <div id="combobox_content" class ="combobox-content">
-                  <a href = "/first_test/main/1/guham">구함</a>
-                  <a href = "/first_test/main/1/beorim">버림</a>
-                </div>
-              -->
                   <div id="combobox_content" class = "combobox-content">
                     <a href = "/first_test/main/1/guham">구함</a>
                     <a href = "/first_test/main/1/beorim">버림</a>
