--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -215,8 +215,10 @@ transition: width 1s;
 .close {
     color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    font-size: 15px;
     font-weight: bold;
+    border : 0;
+    outline : 0;
 }
 
 .close:hover,
@@ -451,7 +453,36 @@ table.type08 td .ex_time{
       background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
 }
 
-#modal-recv-content {
+.modal-send{
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 800; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.reply_modal{
+
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 800; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#modal-reply-content{
   left : 50%;
   top : 0px;
   width:360px;
@@ -461,6 +492,27 @@ table.type08 td .ex_time{
   margin: auto;
   border: 1px solid #888;
 }
+#modal-recv-content{
+  left : 50%;
+  top : 0px;
+  width:360px;
+  height:450px;
+  z-index:1000;
+  background-color: #fefefe;
+  margin: auto;
+  border: 1px solid #888;
+}
+
+ #modal-send-content{
+   left : 50%;
+   top : 0px;
+   width:360px;
+   height:450px;
+   z-index:1000;
+   background-color: #fefefe;
+   margin: auto;
+   border: 1px solid #888;
+ }
 
 #Replybtn{
   border-radius: 5px;
@@ -489,6 +541,21 @@ table.type08 td .ex_time{
   height:29px;
   z-index: 12;
 }
+
+#Okbtn2{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 145px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+
 .recv_mail_textarea{
   border-width: 1px;
  border-color: rgb(190, 190, 190);
@@ -497,6 +564,17 @@ table.type08 td .ex_time{
  margin-left: 15px;
  width: 331px;
  height: 258px;
+ z-index: 5;
+}
+
+#message_text{
+  border-width: 1px;
+ border-color: rgb(190, 190, 190);
+ border-style: solid;
+ position: absolute;
+ margin-left: 15px;
+ width: 331px;
+ height: 280px;
  z-index: 5;
 }
 
@@ -541,4 +619,111 @@ table.type08 td .ex_time{
 .modal-mail-footer{
   width :100%;
   height : 40px;
+}
+.modal-reply-header{
+  width :100%;
+  height : 80px;
+}
+.modal-reply-body{
+  width :100%;
+  height : 330px;
+}
+.modal-reply-footer{
+  width :100%;
+  height : 40px;
+}
+
+.modal-send-header{
+  width :100%;
+  height : 100px;
+}
+.modal-send-body{
+  width :100%;
+  height : 310px;
+}
+.modal-send-footer{
+  width :100%;
+  height : 40px;
+}
+
+#recipientname{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 13px;
+  margin-top : 13px;
+  z-index: 13;
+}
+#recipientname_2{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 78px;
+  margin-top : 13px;
+  z-index: 13;
+}
+#when_send{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 13px;
+  margin-top : 36px;
+  z-index: 13;
+}
+#read_flag{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 13px;
+  margin-top : 56px;
+  z-index: 13;
+}
+#SendReplybtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 200px;
+  width: 70px;
+  height:29px;
+  z-index: 11;
+}
+
+#SendClosebtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 90px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+
+#dropdown_btn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  width: 90px;
+  height:30px;
+  z-index: 11;
 }
