--- a/public/stylesheets/new_mypage.css
+++ b/public/stylesheets/new_mypage.css
@@ -319,8 +319,10 @@ z-index: 30;
 .close {
     color: #aaaaaa;
     float: right;
-    font-size: 28px;
+    font-size: 15px;
     font-weight: bold;
+    border : 0;
+    outline : 0;
 }
 
 .close:hover,
@@ -445,4 +447,211 @@ table.mailtable tbody td {
   border-bottom: 1px solid #ccc;
   text-align: center;
   padding: 7px;
+}
+
+/* 쪽지 창 css*/
+
+.modal-recv{
+
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 800; /* Sit on top */
+      padding-top: 100px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.reply_modal{
+
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 800; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0,0,0); /* Fallback color */
+        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+#modal-reply-content{
+  left : 50%;
+  top : 0px;
+  width:360px;
+  height:450px;
+  z-index:1000;
+  background-color: #fefefe;
+  margin: auto;
+  border: 1px solid #888;
+}
+#modal-recv-content {
+  left : 50%;
+  top : 0px;
+  width:360px;
+  height:450px;
+  z-index:1000;
+  background-color: #fefefe;
+  margin: auto;
+  border: 1px solid #888;
+}
+
+#Replybtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 200px;
+  width: 70px;
+  height:29px;
+  z-index: 11;
+}
+
+#Okbtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 90px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
+}
+.recv_mail_textarea{
+  border-width: 1px;
+ border-color: rgb(190, 190, 190);
+ border-style: solid;
+ position: absolute;
+ margin-left: 15px;
+ width: 331px;
+ height: 258px;
+ z-index: 5;
+}
+
+#message_text{
+  border-width: 1px;
+ border-color: rgb(190, 190, 190);
+ border-style: solid;
+ position: absolute;
+ margin-left: 15px;
+ width: 331px;
+ height: 280px;
+ z-index: 5;
+}
+
+#who_send{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 13px;
+  z-index: 3;
+}
+#send_time{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  position: absolute;
+  margin-top: 63px;
+  margin-left: 13px;
+  z-index: 3;
+}
+#who_number{
+  font-size: 15px;
+  font-family: "NanumBarunGothic";
+  color: rgb(0, 0, 0);
+  line-height: 1.2;
+  position: absolute;
+  margin-top: 38px;
+  margin-left: 13px;
+  z-index: 3;
+}
+.modal-mail-header{
+  width :100%;
+  height : 110px;
+}
+.modal-mail-body{
+  width :100%;
+  height : 300px;
+}
+.modal-mail-footer{
+  width :100%;
+  height : 40px;
+}
+.modal-reply-header{
+  width :100%;
+  height : 80px;
+}
+.modal-reply-body{
+  width :100%;
+  height : 330px;
+}
+.modal-reply-footer{
+  width :100%;
+  height : 40px;
+}
+#recipientname{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  font-weight: bold;
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 13px;
+  margin-top : 13px;
+  z-index: 13;
+}
+#recipientname_2{
+  font-size: 17px;
+  font-family: "NanumBarunGothic";
+  color: rgb(90, 90, 90);
+  line-height: 1.2;
+  position: absolute;
+  margin-left : 78px;
+  margin-top : 13px;
+  z-index: 13;
+}
+
+
+#SendReplybtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 200px;
+  width: 70px;
+  height:29px;
+  z-index: 11;
+}
+
+#SendClosebtn{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color : rgb(153, 153, 153);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: 90px;
+  width: 70px;
+  height:29px;
+  z-index: 12;
 }
