--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -85,7 +85,7 @@
       %>
           <form id="form" action="/first_test/search/1" method="get">
               <input type="text" name="searchText">
-              <input type="submit" class="btn" value='검색'>
+              <input type="submit" id="btn_search" value='검색'>
           </form>
       <%
         }else{
