--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -412,7 +412,48 @@ table.mailtable tbody td {
   text-align: center;
   padding: 7px;
 }
-
+.select_matching
+{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  margin-left: -40px;
+  margin-top: -4px;
+  width: 80px;
+  height:30px;
+  z-index: 11;
+}
+#write_matching_modalbtn
+{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  margin-top: 10px;
+  width: 140px;
+  height:30px;
+  z-index: 11;
+}
+#writeButton
+{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  width: 90px;
+  height:30px;
+  z-index: 11;
+}
 #exchange_req_td{
   width : 103.6px;
   background-color : #52A7BA;
@@ -512,6 +553,20 @@ table.type08 td .ex_time{
    margin: auto;
    border: 1px solid #888;
  }
+#btn_search{
+  border-radius: 5px;
+  font-size: 13px;
+  font-family: "NanumBarunGothic";
+  color: rgb(255, 255, 255);
+  background-color: rgb(58, 74, 88);
+  line-height: 1.2;
+  position: absolute;
+  width: 70px;
+  height : 30px;
+  z-index: 11;
+  margin-left: 190px;
+  margin-top: -22px;
+}
 
 #Replybtn{
   border-radius: 5px;
