--- a/views/ft_findID.ejs
+++ b/views/ft_findID.ejs
@@ -46,8 +46,8 @@
 
   <div id="find_id" class="tabcontent">
     <form action="/first_test/findID_success" method="get">
-    <input type='text' name='f_name' id='f_name' placeholder="이름을 입력하세요"><br>
-    <input type='text' name='f_number' id='f_number' placeholder='핸드폰번호를 입력하세요'>
+    <br><input type='text' name='f_name' id='f_name'  class = "a1"placeholder="이름을 입력하세요"><br><br>
+    <input type='text' name='f_number' id='f_number' class = "a1" placeholder='핸드폰번호를 입력하세요'>
     <input type='submit' id='find_button' value="확인">
 </form>
 
@@ -55,9 +55,9 @@
 
   <div id="find_pwd" class="tabcontent">
 <form action="/first_test/findpwd_success" method="get">
-  <input type='text' name='f_email' id='f_email' placeholder="이메일을 입력하세요"><br>
-  <input type='text' name='f_name' id='f_name2' placeholder="이름을 입력하세요"><br>
-  <input type='text' name='f_number' id='f_number2' placeholder='핸드폰번호를 입력하세요'>
+  <br><input type='text' name='f_email' id='f_email' class = "a1" placeholder="이메일을 입력하세요"><br><br>
+  <input type='text' name='f_name' id='f_name2'  class = "a1" placeholder="이름을 입력하세요"><br><br>
+  <input type='text' name='f_number' id='f_number2' class = "a1" placeholder='핸드폰번호를 입력하세요'>
     <input type='submit' id='find_button2' value="확인">
 </form>
 </div>
