--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -13,10 +13,10 @@
   <body ondragstart="return false">
     <div id="wrapper">
 
-
+<!--
       <p id="mention3">강의교환</p>
       <div id="rectangle_2"></div>
-
+-->
 
       <div id="first_area">
         <div id="div_logo">
@@ -141,7 +141,8 @@
     <div id="main_area_second">
     <div class = "tab-content">
         <div id="board" class="tab-pane">
-
+          <p id="mention3">버림/구함</p>
+          <div id="rectangle_2"></div>
           <table class="type07">
               <thead>
                 <tr>
@@ -316,7 +317,8 @@
         </div>
 
         <div id="exchange" class="tab-pane active">
-
+          <p id="mention3">강의교환</p>
+          <div id="rectangle_2"></div>
           <table class="type08">
             <thead>
               <tr>
