--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -339,10 +339,9 @@ table.mailtable tbody tr:hover, table.mailtable tbody tr:hover td{
 .type07 tr:nth-child(even){background-color: #E3E2E2;}
 
 .combobox {
-    position: absolute;
+    position: relative;
     display: inline-block;
     margin-left: 300px;
-    margin-top: -44px;
 }
 
 .combobox-content {
@@ -353,6 +352,7 @@ table.mailtable tbody tr:hover, table.mailtable tbody tr:hover td{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 31;
 }
+
 
 .combobox-content a {
     color: black;
@@ -776,8 +776,8 @@ table.type08 td .ex_time{
   color: rgb(255, 255, 255);
   background-color: rgb(58, 74, 88);
   line-height: 1.2;
-  position: absolute;
   width: 90px;
   height:30px;
+  margin-top : 20px;
   z-index: 11;
 }
