--- a/views/ft_join1.ejs
+++ b/views/ft_join1.ejs
@@ -13,7 +13,7 @@
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-          <p id="logo">LOGO</a></P>
+            <img src="/images/로고.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
@@ -23,7 +23,7 @@
           <% } else  {%>
           <p id="first_join"><a href = "/first_test/logout" style="text-decoration:none;">로그아웃</a></p>  <button type = "button" id="MailBoxbtn" data-toggle="modal">메일함</button>
           <% } %>
-        
+
 
           <div class = "modal" id= "MailBoxModal" style="display:none;" >
           <div class = "modal-dialog">
