--- a/views/ft_join2.ejs
+++ b/views/ft_join2.ejs
@@ -43,7 +43,7 @@
          <input type = "button" value = "가입" id="joinButton">
          <div id="first_area">
            <div id="div_logo">
-             <p id="logo">LOGO</a></P>
+              <img src="/images/로고.png" id="logo"></img>
            </div>
            <div id="z">
            </div>
