--- a/views/ft_login.ejs
+++ b/views/ft_login.ejs
@@ -12,7 +12,7 @@
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-          <p id="logo">LOGO</P>
+          <img src="/images/로고.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
