--- a/views/ft_mypage.ejs
+++ b/views/ft_mypage.ejs
@@ -13,7 +13,7 @@
     <div id="wrapper">
       <div id="first_area">
         <div id="div_logo">
-          <p id="logo">LOGO</a></P>
+            <img src="/images/로고.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
