--- a/views/ft_leave3.ejs
+++ b/views/ft_leave3.ejs
@@ -17,7 +17,7 @@
       <input type="button" value="확인" id="ok_button">
       <div id="first_area">
         <div id="div_logo">
-           <p id="logo">LOGO</a></P>
+          <img src="/images/로고.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
