--- a/views/ft_update1.ejs
+++ b/views/ft_update1.ejs
@@ -22,7 +22,7 @@
     <input type="button" value="다음" id="rectangle_8_2">
       <div id="first_area">
         <div id="div_logo">
-         <p id="logo">LOGO</a></P>
+          <img src="/images/로고.png" id="logo"></img>
         </div>
         <div id="z">
         </div>
