자동새로고침추가

--- a/views/ft_main.ejs
+++ b/views/ft_main.ejs
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta name=”viewport” content=”width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no” />
         <script type="text/javascript" ></script>
+        <script language='javascript'>
+          window.setTimeout('window.location.reload()',60000); //60초마다 새로고침
+        </script>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>board</title>
